Upgrade to Java 17 + clean up + Teams